--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ export APITOKEN=eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIxYzI2OTgyNjk2MWI2MWUyM2JiOGQ5MDd
 export APIKEY=1c269826961b61e23bb8d907d9c74993
 export LOGLEVEL=1
 export CLIENTURL=http://localhost:5173
-export REDISURL=localhost:6379
+export REDISURL=redis:6379
