--- a/nginx/nginx.docker.conf
+++ b/nginx/nginx.docker.conf
@@ -8,20 +8,19 @@ upstream server {
 
 server {
     listen 80;
-    
+    listen [::]:80;
+
+    server_name localhost;
+    access_log /var/log/nginx/movie.access.log;
+    error_log /var/log/nginx/movie.error.log;
     location / {
-        proxy_pass http://client;
-    }
-
-    location /sockjs-node {
-        proxy_pass http://client;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
-
-    location /server {
-        rewrite /server/(.*) /$1 break;
-        proxy_pass http://server;
+            proxy_pass http://127.0.0.1:5173/;
+            client_max_body_size 50m;
+            client_body_buffer_size 16k;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
     }
 }
