frontend running on nginx, -- needs to resolve backend host

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,7 @@ version: '1'
 services:
   redis:
     image: 'redis:latest'
-    ports: 
-      - '6397:6397'
-  server:
+  api:
     build:
       dockerfile: server.Dockerfile
       context: ./server
@@ -17,22 +15,19 @@ services:
       - REDISURL=$REDISURL
     volumes:
       - .:/server
-    ports: 
-      - '8080:8080'
   client:
     build:
       dockerfile: client.Dockerfile
       context: ./client
     volumes:
       - .:/client
-    ports: 
-      - '5173:5173'
   nginx:
     restart: always
     build:
       dockerfile: nginx.Dockerfile
       context: ./nginx
     ports:
-      - '80:80'
+      - '3050:80'
     depends_on:
+      - api
       - client
